# poker_knightNG

./: .gitignore  ARCHITECTURE.md  TODO.md  apiNG.md  apiNGv2.md  pyproject.toml  setup.py
benchmarks/: tune_kernel_config.py
benchmarks/profiling/: gpu_profiler.py
src/poker_knight_ng/: __init__.py  api.py  api_server.py  card_utils.py  gpu_structures.py  memory_manager.py  memory_manager_enhanced.py  result_builder.py  validator.py
src/poker_knight_ng/cuda/: __init__.py  board_analyzer.cuh  constants.cuh  hand_evaluator.cuh  icm_calculator.cuh  kernel_wrapper.py  poker_kernel.cu  rng.cuh
tests/: benchmark_performance.py  compare_results.py  test_api_compliance.py  test_batch_consistency.py  test_gpu_keepalive.py  test_integration.py  test_performance_comparison.py  test_variance_reduction.py
tests/accuracy/: test_board_analysis.py  test_confidence_intervals.py  test_hand_categories.py  test_icm_calculations.py  test_known_probabilities.py
tests/unit/: test_card_utils.py  test_validation.py
